tests/baselines/reference/parserModuleDeclaration1.d.errors.txt
tests/cases/conformance/parser/ecmascript5/ModuleDeclarations/parserModuleDeclaration1.d.ts(1,1): error TS1046: A 'declare' modifier is required for a top level declaration in a .d.ts file.


==== tests/cases/conformance/parser/ecmascript5/ModuleDeclarations/parserModuleDeclaration1.d.ts (1 errors) ====
    module "Foo" {
    ~~~~~~
!!! error TS1046: A 'declare' modifier is required for a top level declaration in a .d.ts file.
    }